--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,18 @@
             <artifactId>jaxb-runtime</artifactId>
             <version>2.3.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.integralpivots.gera</groupId>
+            <artifactId>gera-comm</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.integralpivots.gera</groupId>
+            <artifactId>server-config</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
